Changed the README for the PCLP3 project

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Tema3 SDA - DUDU Matei-Ioan 313CB
+# Proiect PCLP3 - DUDU Matei-Ioan 313CB
 
 In componenta acestei teme fac parte patru fisiere, a caror explicatie o voi da
 in cele ce urmeaza:
